Worked on lab 9/8

--- a/Lab2/SmartPhoneProducts1/index.html
+++ b/Lab2/SmartPhoneProducts1/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head> 
+    
     <title> Smartphone Store Home </title>
     <h1> BJ Ramel's Used Smart Phone Store </h1>
   </head>
+  <body>
+
+    <img src="images/phone_globe.jpg" alt="A phone with a globe in the background" height="50%" width="50%">
+
+  </body>
 </html>
