--- a/Lab2/SmartPhoneProducts1/index.html
+++ b/Lab2/SmartPhoneProducts1/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Smartphone Store Home</title>
+
+    <style>
+        body {
+            background: red;
+            text-align: center;
+        }
+        
+        img {
+            border: 1px solid #ddd;
+            /* Gray border */
+            border-radius: 4px;
+            /* Rounded border */
+            padding: 5px;
+            /* Some padding */
+            width: 150px;
+            /* Set a small width */
+        }
+
+        /* Add a hover effect (blue shadow) */
+        img:hover {
+            box-shadow: 0 0 5px 1px black;
+        }
+    </style>
+
+</head>
+<body>
     
-    <title> Smartphone Store Home </title>
-    <h1> BJ Ramel's Used Smart Phone Store </h1>
-  </head>
-  <body>
+    <h1>BJ's Used Smart Phone Store</h1>
 
-    <img src="images/phone_globe.jpg" alt="A phone with a globe in the background" height="50%" width="50%">
-
-  </body>
+    <a href="products_display.html">
+        <img src="images/phone_globe.jpg" alt="A phone with a globe in the background" height="50%" width="50%">
+    </a>
+    <h2>Click the image to enter store!</h2>
+</body>
 </html>
