--- a/WODs/BrowserHistory2/index.html
+++ b/WODs/BrowserHistory2/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A history of web browsers</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>A history of web browsers</h1>
@@ -36,7 +38,7 @@
     <h1>A brief history of Chrome</h1>
     <img src="images/Google_Chrome_icon (3).svg" style="width:100px">
 
-    <p><a href="https://www.google.com/">Google</a>’s Eric Schmidt opposed the development of an independent web browser for six years. He stated that “at the time, Google was a small company,” and he did not want to go through “bruising browser wars.” After co-founders Sergey Brin and Larry Page hired several Mozilla Firefox developers and built a demonstration of Chrome, however, Schmidt admitted that “It was so good that it essentially forced me to change my mind.”</p>
+    <t><a href="https://www.google.com/">Google</a>’s Eric Schmidt opposed the development of an independent web browser for six years. He stated that “at the time, Google was a small company,” and he did not want to go through “bruising browser wars.” After co-founders Sergey Brin and Larry Page hired several Mozilla Firefox developers and built a demonstration of Chrome, however, Schmidt admitted that “It was so good that it essentially forced me to change my mind.”</t>
 
     <p>In December 2010 Google announced that to make it easier for businesses to use Chrome they would provide an official Chrome MSI package. For business use it is helpful to have full-fledged MSI packages that can be customized via transform files (.mst) - but the MSI provided with Chrome is only a very limited MSI wrapper fitted around the normal installer, and many businesses find that this arrangement does not meet their needs.</p>
 
