--- a/Lab3/SmartPhoneProducts1_1/products_display.html
+++ b/Lab3/SmartPhoneProducts1_1/products_display.html
@@ -18,6 +18,7 @@
         <h1>BJ's Used Smart Phone Store</h1>
     </header>
     <div>
+        <h3> Change image rotation speed:</h3>
         <input id='speedSlider' type='range' min=".1" max="5" step=".1" style="direction: rtl;" onchange="localStyle.innerHTML = '.rotate img {animation-duration: ' + speedSlider.value + 's;}';">
     </div>
     <div>
