--- a/Lab5/SmartPhoneProducts1_3/products_display.html
+++ b/Lab5/SmartPhoneProducts1_3/products_display.html
@@ -19,7 +19,8 @@
         const store_name="BJ Ramel";
         const first_name="BJ";
         const last_name="Ramel";
-    
+        let initials=first_name.charAt(0)+"."+last_name.charAt(0)+".";
+        const now=new Date();
     </script>
 
 </head>
@@ -47,32 +48,32 @@
         </aside>
 
         <main>
-            <section class="item" onmouseover="changeClassName(this); spins_span.innerHTML = spins++; hit_spin_span.innerHTML = (hits/spins).toFixed(2);" onclick="resetClassName(this); hits_span.innerHTML = hits++; hit_spin_span.innerHTML = (hits/spins).toFixed(2);"">
+            <section class="item" onmouseover="changeClassName(this); spins_span.innerHTML = ++spins; hit_spin_span.innerHTML = (hits/spins).toFixed(2);" onclick="resetClassName(this); hits_span.innerHTML = ++hits; hit_spin_span.innerHTML = (hits/spins).toFixed(2);"">
                 <h2>HTC</h2>
                 <p>$40.00</p>
                 <img src="http://dport96.github.io/ITM352/morea/080.flow-control-II/HTC.jpg" alt="HTC Phones">
             </section>
            
             </section>
-            <section class="item" onmouseover="changeClassName(this); spins_span.innerHTML = spins++; hit_spin_span.innerHTML = (hits/spins);" onclick="resetClassName(this); hits_span.innerHTML = hits++; hit_spin_span.innerHTML = (hits/spins);"">                
+            <section class="item" onmouseover="changeClassName(this); spins_span.innerHTML = ++spins; hit_spin_span.innerHTML = (hits/spins).toFixed(2);" onclick="resetClassName(this); hits_span.innerHTML = ++hits; hit_spin_span.innerHTML = (hits/spins).toFixed(2);"">                
                 <h2>Apple</h2>
                 <p>$75.00</p>
                 <img src="http://dport96.github.io/ITM352/morea/080.flow-control-II/iphone-3gs.jpg">
             </section>
 
-            <section class="item" onmouseover="changeClassName(this); spins_span.innerHTML = spins++; hit_spin_span.innerHTML = (hits/spins);" onclick="resetClassName(this); hits_span.innerHTML = hits++; hit_spin_span.innerHTML = (hits/spins);"">                
+            <section class="item" onmouseover="changeClassName(this); spins_span.innerHTML = ++spins; hit_spin_span.innerHTML = (hits/spins).toFixed(2);" onclick="resetClassName(this); hits_span.innerHTML = ++hits; hit_spin_span.innerHTML = (hits/spins).toFixed(2);"">                
                 <h2>Nokia</h2>
                 <p>$35.00</p>
                 <img src="http://dport96.github.io/ITM352/morea/080.flow-control-II/Nokia.jpg">
             </section>
 
-            <section class="item" onmouseover="changeClassName(this); spins_span.innerHTML = spins++; hit_spin_span.innerHTML = (hits/spins);" onclick="resetClassName(this); hits_span.innerHTML = hits++; hit_spin_span.innerHTML = (hits/spins);"">                
+            <section class="item" onmouseover="changeClassName(this); spins_span.innerHTML = ++spins; hit_spin_span.innerHTML = (hits/spins).toFixed(2);" onclick="resetClassName(this); hits_span.innerHTML = ++hits; hit_spin_span.innerHTML = (hits/spins).toFixed(2);"">                
                 <h2>Samsung</h2>
                 <p>$45.00</p>
                 <img src="http://dport96.github.io/ITM352/morea/080.flow-control-II/Samsung.jpg">
             </section>
 
-            <section class="item" onmouseover="changeClassName(this); spins_span.innerHTML = spins++; hit_spin_span.innerHTML = (hits/spins);" onclick="resetClassName(this); hits_span.innerHTML = hits++; hit_spin_span.innerHTML = (hits/spins);"">                
+            <section class="item" onmouseover="changeClassName(this); spins_span.innerHTML = ++spins; hit_spin_span.innerHTML = (hits/spins).toFixed(2);" onclick="resetClassName(this); hits_span.innerHTML = ++hits; hit_spin_span.innerHTML = (hits/spins).toFixed(2);"">                
                 <h2>Blackberry</td>
                 </h2>
                 <p>$10.00</p>
@@ -84,11 +85,22 @@
     <footer>
         <h1>
             <table border="1" style="margin-left: auto; margin-right: auto; text-align: center;">
-                <tbody><tr><th colspan="2"><h1>Your One Stop For Used Phones - D.P.'s</h1></th></tr>
-                <tr><td>1.</td><td><br>Copyright @ Dan Port</td></tr>
-                <tr><td>2.</td><td>2021</td></tr>
-                <tr><td>3.</td><td>11:15 AM</td></tr>
-            </tbody></table>
+                <tbody>
+                    <tr><th colspan="2"><h1>Your One Stop For Used Phones - <script>document.write(initials)</script>'s</h1></th></tr>
+                    <tr>
+                        <td>1.</td>
+                        <td><br>Copyright @ <script>document.write(first_name + " " + last_name)</script></td>
+                    </tr>
+                    <tr>
+                        <td>2.</td>
+                        <td><script>document.write(now)</script></td>
+                    </tr>
+                    <tr>
+                        <td>3.</td>
+                        <td>11:15 AM</td>
+                    </tr>
+                </tbody>
+            </table>
     </footer>
 
     <script>
