--- a/Lab6/lab6d.html
+++ b/Lab6/lab6d.html
@@ -9,6 +9,6 @@
     <input type="text" id="monthInput">
     <button id="calculateButton">Calculate</button>
     <p id="result"></p>
-    <script src="lab6d.js"></script>
+    <script src="lab6.js"></script>
 </body>
 </html>
