--- a/POKE/Invoice2/invoice.html
+++ b/POKE/Invoice2/invoice.html
@@ -33,8 +33,12 @@
                 <td id="tax_cell">$0.00</td>
             </tr>
             <tr>
-                <td id = "after" colspan="3" >Total</td>
-                <td id="total_cell"><strong>$0.00</strong></td>
+                <td id = "after" colspan="3">Shipping</td>
+                <td id="shipping">$0.00</td>
+            </tr>
+            <tr>
+                <td id = "after" colspan="3" style="font-weight: bold;">Total</td>
+                <td id="total_cell" style="font-weight: bold;">$0.00</td>
             </tr>
         </tfoot>
     </table>
