--- a/POKE/Invoice3/invoice.html
+++ b/POKE/Invoice3/invoice.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Cherry+Swash|Raleway" rel="stylesheet">
     <link href="invoice.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +39,7 @@
             </tr>
         </tfoot>
     </table>
-    <script src="invoice.js" type="module" ></script>
+    <script src="./invoice.js" type="module"></script>
     <!--note that you have to set script type to "module" to use import-->
 </body>
 </html>
