--- a/Lab11/Page3/order_page3.html
+++ b/Lab11/Page3/order_page3.html
@@ -6,11 +6,11 @@
 <body>
     <form name="qty_form" action="display_purchase.html" method="GET">
         <label for="qty_textbox">Quantity Desired:</label>
-        <input type="text" id="qty_textbox" onkeyup="updateQuantityMessage(this)">
+        <input type="text" name="qty_textbox">
         <span id="qty_textbox_message">Enter a quantity</span>
 
         <br><br>
-        <button onclick ="displayPurchase()">Purchase</button>
+        <input type ="submit" value="Purchase">
     </form>
     <!--note that because the fomr points to a different page, order3.js no longer is used/...-->
     <script src="order3.js"></script>
