--- a/Ramel_BJAngelo_Assignment1/public/products.html
+++ b/Ramel_BJAngelo_Assignment1/public/products.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Page</title>
 
+    <!-- stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
     <link href="https://fonts.googleapis.com/css?family=Cherry+Swash|Raleway" rel="stylesheet">
+
     <link href="style.css" rel="stylesheet">
     <script type="text/javascript" src="/products.js"></script>
     <script src="products_display.js"></script>
