--- a/Labs/Lab11/Page2/order_page2.html
+++ b/Labs/Lab11/Page2/order_page2.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <label for="qty_textbox">Quantity Desired:</label>
-    <input type="text" id="qty_textbox" onkeyup="updateQuantityMessage(this)">
+    <input type="text" id="qty_textbox" oninput="updateQuantityMessage(this)">
     <span id="qty_textbox_message">Enter a quantity</span>
 
     <br><br>
