--- a/Ramel_BJAngelo_Assignment1/public/index.html
+++ b/Ramel_BJAngelo_Assignment1/public/index.html
@@ -2,11 +2,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- My website idea came from wanting to create something memorable that you won't forget... please don't report the suspiciousness :) At least you won't forget! -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- sstylesheet -->
+    <!-- stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Cherry+Swash|Raleway" rel="stylesheet">
