--- a/Ramel_BJAngelo_Assignment2/public/index.html
+++ b/Ramel_BJAngelo_Assignment2/public/index.html
@@ -2,20 +2,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- My website idea came from wanting to create something memorable that you won't forget... please don't report the suspiciousness :) At least you won't forget! -->
-
 <head>
+    <!-- Meta tags for character set and viewport -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- stylesheet -->
+    <!-- External stylesheet links -->
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Cherry+Swash|Raleway" rel="stylesheet">
 
-    <!-- Custom stylesheet -->
+    <!-- Custom stylesheet link -->
     <link href="style.css" rel="stylesheet">
 
+    <!-- Title of the page -->
     <title>Store Introduction page</title>
 </head>
 
@@ -24,12 +27,12 @@
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <ul class="navbar-nav">
+            <!-- Home link -->
             <li class="nav-item">
-                <!-- Home link -->
                 <a class="nav-link active" href="./index.html">Home</a>
             </li>
+            <!-- Products link -->
             <li class="nav-item">
-                <!-- Products link -->
                 <a class="nav-link" href="./products.html">Products</a>
             </li>
         </ul>
@@ -38,6 +41,7 @@
     <!-- Container with background image -->
     <div class="container mt-5">
         <style>
+            /* Styling for the background image */
             body {
                 background-image: url('./images/ScaryDoor.jpeg'); /* Replace with the actual path to your door image */
                 height: 100vh;
@@ -45,19 +49,38 @@
         </style>
     </div>
 
+    <!-- Message box for displaying error or other messages -->
+    <div id="Msg"></div>
+
     <!-- Invisible box for a link -->
     <div class="invisible-box">
         <a href="./products.html"></a>
     </div>
 
-    <!-- Box at the bottom -->
+    <!-- Box at the bottom with welcome and instruction messages -->
     <div class="bottom-box">
-        <!-- Welcome message -->
         <p>Welcome to the store</p>
-        <!-- Instruction message -->
         <p>Please click on the door to enter</p>
     </div>
 
+    <!-- JavaScript script for handling error messages -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            // Extracting query parameters from the URL
+            const urlParams = new URLSearchParams(window.location.search);
+    
+            // Get the error message from the query parameters, if any
+            let errorMessage = urlParams.get('error') || "";
+
+            // Set the error message in the Msg div if present
+            if (errorMessage) {
+                document.getElementById("Msg").innerHTML = decodeURIComponent(errorMessage);
+            } else {
+                // If there is no error, hide the Msg div
+                document.getElementById("Msg").style.display = "none";
+            }
+        });
+    </script>
 </body>
 
 </html>
