--- a/Ramel_BJAngelo_Assignment2/public/invoice.html
+++ b/Ramel_BJAngelo_Assignment2/public/invoice.html
@@ -3,13 +3,19 @@
 <html lang="en">
 
 <head>
+    <!-- Meta tags for character set and viewport -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Title of the page -->
     <title>Invoice</title>
 
-    <!-- stylesheet -->
+    <!-- External stylesheets -->
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Cherry+Swash|Raleway" rel="stylesheet">
 
     <!-- Custom stylesheet -->
@@ -23,6 +29,7 @@
 
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <!-- Navigation links -->
         <ul class="navbar-nav">
             <!-- Home link -->
             <li class="nav-item">
@@ -55,23 +62,36 @@
             <!-- Table footer with subtotal, tax, shipping, and total -->
             <tfoot>
                 <tr>
-                    <td id="after" colspan="3">Sub-total</td>
+                    <td colspan="3">Sub-total</td>
                     <td id="subtotal_cell">$0.00</td>
                 </tr>
                 <tr>
-                    <td id="after" colspan="3">Tax @ 5.75%</td>
+                    <td colspan="3">Tax @ 5.75%</td>
                     <td id="tax_cell">$0.00</td>
                 </tr>
                 <tr>
-                    <td id="after" colspan="3">Shipping</td>
+                    <td colspan="3">Shipping</td>
                     <td id="shipping">$0.00</td>
                 </tr>
                 <tr>
-                    <td id="after" colspan="3" style="font-weight: bold;">Total</td>
+                    <td colspan="3" style="font-weight: bold;">Total</td>
                     <td id="total_cell" style="font-weight: bold;">$0.00</td>
                 </tr>
             </tfoot>
         </table>
+
+        <!-- Buttons container with Continue Shopping and Log Out buttons -->
+        <div class="buttons-container">
+            <!-- Form for Continue Shopping button -->
+            <form action="/continue_shopping" method="POST">
+                <button class="btn btn-primary">Continue Shopping</button>
+            </form>
+            
+            <!-- Form for Log Out button -->
+            <form action="/purchase_logout" method="POST">
+                <button class="btn btn-danger">Log Out</button>
+            </form>
+        </div>
 
         <!-- External JavaScript file for invoice functionality -->
         <script src="invoice.js" type="module"></script>
