--- a/Ramel_BJAngelo_Assignment2/public/products.html
+++ b/Ramel_BJAngelo_Assignment2/public/products.html
@@ -1,35 +1,52 @@
 <!----------------------products.html--------------------------->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Page</title>
 
-    <!-- stylesheet -->
+    <!-- Stylesheet links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Cherry+Swash|Raleway" rel="stylesheet">
-
     <link href="style.css" rel="stylesheet">
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- External JavaScript files for product data and display -->
     <script type="text/javascript" src="/products.js"></script>
     <script src="products_display.js"></script>
 </head>
+
 <body>
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <ul class="navbar-nav">
+            <!-- Home link -->
             <li class="nav-item">
                 <a class="nav-link active" href="./index.html">Home</a>
             </li>
+            <!-- Products link -->
             <li class="nav-item">
                 <a class="nav-link" href="./products.html">Products</a>
             </li>
         </ul>
+
+        <!-- Active users and welcome sections -->
+        <div class="users">
+            <span id="activeUsers"></span>
+        </div>
+        <div class="welcome-section">
+            <span id="welcomeText"></span>
+        </div>
     </nav>
 
+    <!-- Product form -->
     <form id="productForm" name="quantity_form" action="/process_purchase" method="POST">
-        <!-- dynamic product inputs will be inserted here-->
-   </form>
+        <!-- Dynamic product inputs will be inserted here -->
+    </form>
 </body>
+
 </html>
