--- a/Ramel_BJAngelo_Assignment3/public/cart.html
+++ b/Ramel_BJAngelo_Assignment3/public/cart.html
@@ -36,10 +36,11 @@
                 <a class="nav-link" href="./products.html?page=Prosthetics">Prosthetics</a>
             </li>
         </ul>
+    </nav>
     <h1>Shopping Cart</h1>
 
     <div class="container mt-3" id="cart">
-        <!--Cart Stuff info -->
+        <!-- Cart Stuff info -->
         <form method="POST" name="cart_form" id="cart" action="/update_shopping_cart">
             <div id="cart_info" name="cart_info"></div>
             <input type="submit" id="cartUpdate" value="Update Cart" class="sm-button highlight">
